--- a/Covid_19.html
+++ b/Covid_19.html
@@ -41,8 +41,8 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>300 Hours of Python - FreeCodeCamp.org</h1>
-                            <p>So at 5am on the 3rd of May 2021 (I am pretty sure January was last week) I have taken on the goal to complete this 300 days of python course on freecodecamp.org. I will be highlighting key information and skills I have learnt, along with some struggles along the way. I am giving myself the deadline of about 4 months, September the 3rd to complete this course. This should average out to about 1.5/2 hours a day. I work a full time job and have other current responsibilities so this feels like a realistic goal.</p>
+							<h1>Covid-19</h1>
+                            <p>Text</p>
 							<span class="image main"><img src="300daysimages/img1.jpg" alt="" /></span>
 							
 						</div>
